# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RU-README.md  base-kit.cmake
docs/: documentation.md  general documentation.md  syntax_rules.md  technical documentation.md
documentation/: Project_structure.txt  documentation.md  documentation.txt
lib/: log.txt
lib/arch-linux-config/fastfetch/: config.jsonc
lib/arch-linux-config/hypr/: hyprland.conf  hyprlock.conf
lib/arch-linux-config/nvim/: init.vim
lib/arch-linux-config/waybar/: config  style.css
lib/arch-linux-config/wofi/: style.css
lib/terminal/: CMakeLists.txt  terminal.hpp
lib/utils/: CMakeLists.txt  colors.hpp  integrated_cxx_libs.hpp  terminal.cpp  terminal.hpp  utils.cpp  utils.hpp
lib/vk/: CMakeLists.txt  createInstance.cpp  createSurface.cpp  getDeviceName.cpp  physicalDevice.cpp  pickPhysicalDevice.cpp  run.cpp  terminate.cpp  vk.hpp
lib/vk/utils/: vkUtils.cpp
src/: CMakeLists.txt  main.cpp  main2.cpp  main24.c  main3.cpp  main_2_test.cpp  main_3_test.cpp  temporary.cpp  temporary.hpp  test.c  test.h
src/engine/: engine.cpp  engine.hpp
src/engine/fileSystem/: createDirs.cpp
src/engine/graphics/: initVulkan.cpp
src/engine/running/: mainloop.cpp
src/utils/: colors.hpp  utils.cpp  utils.hpp
src/vk/: vk.hpp
src/vk/utils/: vkUtils.hpp
